--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 API_BASE_URL="https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline/"
 API_KEY="FQ6A4QTDNJRP348RQXG5RT325"
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=
+REDIS_PORT=6379
+REDIS_CACHE_DB=0
